# feature-engineering

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  class_.py  gaussianize.py  get_data.sh  main.py  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: build.yml  desci.yml
data/: get_data.sh
fenggi/: class_.py  outlier_try.py
fenggi/utils/: handling_outliers.py
fengi/: class_.py  inner_products.py  main.py  targets.py
fengi/utils_feat/: gauss.py  handling_outliers.py  quantization.py
notebooks/: dev.ipynb
paper/: paper.bib  paper.md
src/: class_.py  ctgan_.py  main.py  main_notebook.ipynb  outlier.ipynb  outlier_notebook.ipynb  outlier_try.py  targets.py  todo  untitled.py
src/fengi/: ctgan_.py
src/utils/: gauss.py  handling_outliers.py  quantization.py
src/utils_feat/: gauss.py  quantization.py
tests/: test_hard_quantize.py  test_inner.py
tests/test_example/: test_hello.py
