# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "feature-engineering"
version = "0.1.0"
description = "From dataset to features."
readme = "README.md"
authors = ["CrunchDAO"]
license = "."
repository = "https://github.com/crunchdao/feature-engineering"
homepage = "https://github.com/crunchdao/feature-engineering"
packages = [
    { include = "fengi" },
]

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = ['Orthogonality']

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  #! Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
pandas = "^1.5"
tqdm = "^4.64"
numpy = "^1.24"
matplotlib = "^3.6"
seaborn = "^0.12"
scipy = "^1.10"
scikit-learn = "^1.2"
pyarrow = "^12.0"
ipywidgets = "^8.0"
pandarallel = "^1.6"

[tool.poetry.dev-dependencies]
bandit = "^1.7"
black = {version = "^23.1", allow-prereleases = true}
isort = {extras = ["colors"], version = "^5.10"}
mypy = "^1.0"
mypy-extensions = "^0.4"
pre-commit = "^3.1"
pylint = "^2.11"
pytest = "^7.4"
pyupgrade = "^2.29"
safety = "^2.3"
pydocstyle = "^6.3"
coverage = "^7.3"
coverage-badge = "^1.1"

[tool.black]
# https://github.com/psf/black
target-version = ["py37"]
line-length = 110
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 37
line_length = 110

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = 3.9
pretty = true
show_traceback = true
color_output = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["tests"]

[coverage.paths]
source = "python-project"

[coverage.run]
branch = true

[coverage.report]
fail_under = 50
show_missing = true
